syntax = "proto3";

package system.dict.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "openapi/v3/annotations.proto";

option go_package = "quest-admin/api/gen/dict/v1;v1";

option (openapi.v3.document) = {
  tags: [
    {
      name: "DictTypeService";
      description: "字典类型相关操作";
    },
    {
      name: "DictDataService";
      description: "字典数据相关操作";
    }
  ];
};

service DictTypeService {
  // 创建字典类型
  rpc CreateDictType (CreateDictTypeRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/qs/v1/dict/type/create"
      body: "*"
    };
    option (openapi.v3.operation) = {
      summary: "创建字典类型";
      description: "创建一个新的字典类型";
    };
  }

  // 获取字典类型信息
  rpc GetDictType (GetDictTypeRequest) returns (GetDictTypeReply) {
    option (google.api.http) = {
      get: "/qs/v1/dict/type/get"
    };
    option (openapi.v3.operation) = {
      summary: "获取字典类型详细信息";
      description: "根据字典类型ID获取字典类型的详细信息";
    };
  }

  // 获取字典类型列表
  rpc ListDictTypes (ListDictTypesRequest) returns (ListDictTypesReply) {
    option (google.api.http) = {
      post: "/qs/v1/dict/type/list"
      body: "*"
    };
    option (openapi.v3.operation) = {
      summary: "获取字典类型列表";
      description: "分页查询字典类型列表";
    };
  }

  // 更新字典类型信息
  rpc UpdateDictType (UpdateDictTypeRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/qs/v1/dict/type/update"
      body: "*"
    };
    option (openapi.v3.operation) = {
      summary: "更新字典类型信息";
      description: "更新字典类型的基本信息";
    };
  }

  // 删除字典类型
  rpc DeleteDictType (DeleteDictTypeRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/qs/v1/dict/type/delete"
    };
    option (openapi.v3.operation) = {
      summary: "删除字典类型";
      description: "删除字典类型，此操作不可逆";
    };
  }

  // 创建字典数据
  rpc CreateDictData (CreateDictDataRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/qs/v1/dict/data/create"
      body: "*"
    };
    option (openapi.v3.operation) = {
      summary: "创建字典数据";
      description: "创建一个新的字典数据";
    };
  }

  // 获取字典数据信息
  rpc GetDictData (GetDictDataRequest) returns (GetDictDataReply) {
    option (google.api.http) = {
      get: "/qs/v1/dict/data/get"
    };
    option (openapi.v3.operation) = {
      summary: "获取字典数据详细信息";
      description: "根据字典数据ID获取字典数据的详细信息";
    };
  }

  // 获取字典数据列表
  rpc ListDictData (ListDictDataRequest) returns (ListDictDataReply) {
    option (google.api.http) = {
      post: "/qs/v1/dict/data/list"
      body: "*"
    };
    option (openapi.v3.operation) = {
      summary: "获取字典数据列表";
      description: "分页查询字典数据列表";
    };
  }

  // 更新字典数据信息
  rpc UpdateDictData (UpdateDictDataRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/qs/v1/dict/data/update"
      body: "*"
    };
    option (openapi.v3.operation) = {
      summary: "更新字典数据信息";
      description: "更新字典数据的基本信息";
    };
  }

  // 删除字典数据
  rpc DeleteDictData (DeleteDictDataRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/qs/v1/dict/data/delete"
    };
    option (openapi.v3.operation) = {
      summary: "删除字典数据";
      description: "删除字典数据，此操作不可逆";
    };
  }
}

message DictTypeInfo {
  option (openapi.v3.schema) = {
    description: "字典类型的基本信息";
  };
  string id = 1 [(openapi.v3.property) = {description: "字典类型ID"; example: {yaml: "123456789"}}];
  string name = 2 [(openapi.v3.property) = {description: "字典类型名称"; example: {yaml: "user_gender"}}];
  string code = 3 [(openapi.v3.property) = {description: "字典类型编码"; example: {yaml: "user_gender"}}];
  int32 status = 4 [(openapi.v3.property) = {description: "状态: 0-停用, 1-正常"; example: {yaml: "1"}}];
  int32 sort = 5 [(openapi.v3.property) = {description: "排序号"; example: {yaml: "1"}}];
  string remark = 6 [(openapi.v3.property) = {description: "备注信息"}];
  google.protobuf.Timestamp create_at = 7 [(openapi.v3.property) = {description: "创建时间"}];
  google.protobuf.Timestamp update_at = 8 [(openapi.v3.property) = {description: "更新时间"}];
  string tenant_id = 9 [(openapi.v3.property) = {description: "租户ID"}];
}

message CreateDictTypeRequest {
  option (openapi.v3.schema) = {
    description: "创建字典类型请求体";
  };
  optional string name = 1 [(openapi.v3.property) = {description: "字典类型名称"; example: {yaml: "user_gender"}}];
  optional string code = 2 [(openapi.v3.property) = {description: "字典类型编码"; example: {yaml: "user_gender"}}];
  optional int32 sort = 3 [(openapi.v3.property) = {description: "排序号"; example: {yaml: "1"}}];
  optional string remark = 4 [(openapi.v3.property) = {description: "备注信息"}];
}

message GetDictTypeRequest {
  option (openapi.v3.schema) = {
    description: "获取字典类型信息请求体";
  };
  optional string id = 1 [(openapi.v3.property) = {description: "字典类型ID"; example: {yaml: "123456789"}}];
}

message GetDictTypeReply {
  option (openapi.v3.schema) = {
    description: "获取字典类型信息响应体";
  };
  DictTypeInfo dict_type = 1 [(openapi.v3.property) = {description: "字典类型详细信息"}];
}

message ListDictTypesRequest {
  option (openapi.v3.schema) = {
    description: "查询字典类型列表请求体";
  };
  optional int32 page = 1 [(openapi.v3.property) = {description: "页码，从1开始"; example: {yaml: "1"}}];
  optional int32 page_size = 2 [(openapi.v3.property) = {description: "每页数量，默认10"; example: {yaml: "10"}}];
  optional string keyword = 3 [(openapi.v3.property) = {description: "搜索关键字"; example: {yaml: "gender"}}];
  optional int32 status = 4 [(openapi.v3.property) = {description: "状态筛选: 0-停用, 1-正常"; example: {yaml: "1"}}];
  optional string sort_field = 5 [(openapi.v3.property) = {description: "排序字段"; example: {yaml: "sort"}}];
  optional string sort_order = 6 [(openapi.v3.property) = {description: "排序方式: asc, desc"; example: {yaml: "asc"}}];
}

message ListDictTypesReply {
  option (openapi.v3.schema) = {
    description: "查询字典类型列表响应体";
  };
  repeated DictTypeInfo dict_types = 1 [(openapi.v3.property) = {description: "字典类型列表"}];
  int64 total = 2 [(openapi.v3.property) = {description: "总记录数"; example: {yaml: "100"}}];
  int32 page = 3 [(openapi.v3.property) = {description: "当前页码"; example: {yaml: "1"}}];
  int32 page_size = 4 [(openapi.v3.property) = {description: "每页数量"; example: {yaml: "10"}}];
  int32 total_pages = 5 [(openapi.v3.property) = {description: "总页数"; example: {yaml: "10"}}];
}

message UpdateDictTypeRequest {
  option (openapi.v3.schema) = {
    description: "更新字典类型信息请求体";
  };
  optional string id = 1 [(openapi.v3.property) = {description: "字典类型ID"; example: {yaml: "123456789"}}];
  optional string name = 2 [(openapi.v3.property) = {description: "字典类型名称"; example: {yaml: "user_gender"}}];
  optional string code = 3 [(openapi.v3.property) = {description: "字典类型编码"; example: {yaml: "user_gender"}}];
  optional int32 sort = 4 [(openapi.v3.property) = {description: "排序号"; example: {yaml: "1"}}];
  optional int32 status = 5 [(openapi.v3.property) = {description: "状态: 0-停用, 1-正常"; example: {yaml: "1"}}];
  optional string remark = 6 [(openapi.v3.property) = {description: "备注信息"}];
}

message DeleteDictTypeRequest {
  option (openapi.v3.schema) = {
    description: "删除字典类型请求体";
  };
  optional string id = 1 [(openapi.v3.property) = {description: "字典类型ID"; example: {yaml: "123456789"}}];
}


message DictDataInfo {
  option (openapi.v3.schema) = {
    description: "字典数据的基本信息";
  };
  string id = 1 [(openapi.v3.property) = {description: "字典数据ID"; example: {yaml: "123456789"}}];
  string dict_type_id = 2 [(openapi.v3.property) = {description: "字典类型ID"; example: {yaml: "987654321"}}];
  string label = 3 [(openapi.v3.property) = {description: "字典标签"; example: {yaml: "Male"}}];
  string value = 4 [(openapi.v3.property) = {description: "字典值"; example: {yaml: "1"}}];
  int32 sort = 5 [(openapi.v3.property) = {description: "排序号"; example: {yaml: "1"}}];
  int32 status = 6 [(openapi.v3.property) = {description: "状态: 0-停用, 1-正常"; example: {yaml: "1"}}];
  string css_class = 7 [(openapi.v3.property) = {description: "CSS类名"}];
  bool is_default = 8 [(openapi.v3.property) = {description: "是否默认"; example: {yaml: "false"}}];
  string remark = 9 [(openapi.v3.property) = {description: "备注信息"}];
  google.protobuf.Timestamp create_at = 10 [(openapi.v3.property) = {description: "创建时间"}];
  google.protobuf.Timestamp update_at = 11 [(openapi.v3.property) = {description: "更新时间"}];
  string tenant_id = 12 [(openapi.v3.property) = {description: "租户ID"}];
}

message CreateDictDataRequest {
  option (openapi.v3.schema) = {
    description: "创建字典数据请求体";
  };
  optional string dict_type_id = 1 [(openapi.v3.property) = {description: "字典类型ID"; example: {yaml: "987654321"}}];
  optional string label = 2 [(openapi.v3.property) = {description: "字典标签"; example: {yaml: "Male"}}];
  optional string value = 3 [(openapi.v3.property) = {description: "字典值"; example: {yaml: "1"}}];
  optional int32 sort = 4 [(openapi.v3.property) = {description: "排序号"; example: {yaml: "1"}}];
  optional string css_class = 5 [(openapi.v3.property) = {description: "CSS类名"}];
  optional bool is_default = 6 [(openapi.v3.property) = {description: "是否默认"; example: {yaml: "false"}}];
  optional string remark = 7 [(openapi.v3.property) = {description: "备注信息"}];
}

message GetDictDataRequest {
  option (openapi.v3.schema) = {
    description: "获取字典数据信息请求体";
  };
  optional string id = 1 [(openapi.v3.property) = {description: "字典数据ID"; example: {yaml: "123456789"}}];
}

message GetDictDataReply {
  option (openapi.v3.schema) = {
    description: "获取字典数据信息响应体";
  };
  DictDataInfo dict_data = 1 [(openapi.v3.property) = {description: "字典数据详细信息"}];
}

message ListDictDataRequest {
  option (openapi.v3.schema) = {
    description: "查询字典数据列表请求体";
  };
  optional int32 page = 1 [(openapi.v3.property) = {description: "页码，从1开始"; example: {yaml: "1"}}];
  optional int32 page_size = 2 [(openapi.v3.property) = {description: "每页数量，默认10"; example: {yaml: "10"}}];
  optional string dict_type_id = 3 [(openapi.v3.property) = {description: "字典类型ID"; example: {yaml: "987654321"}}];
  optional string keyword = 4 [(openapi.v3.property) = {description: "搜索关键字"; example: {yaml: "Male"}}];
  optional int32 status = 5 [(openapi.v3.property) = {description: "状态筛选: 0-停用, 1-正常"; example: {yaml: "1"}}];
  optional string sort_field = 6 [(openapi.v3.property) = {description: "排序字段"; example: {yaml: "sort"}}];
  optional string sort_order = 7 [(openapi.v3.property) = {description: "排序方式: asc, desc"; example: {yaml: "asc"}}];
}

message ListDictDataReply {
  option (openapi.v3.schema) = {
    description: "查询字典数据列表响应体";
  };
  repeated DictDataInfo dict_data_list = 1 [(openapi.v3.property) = {description: "字典数据列表"}];
  int64 total = 2 [(openapi.v3.property) = {description: "总记录数"; example: {yaml: "100"}}];
  int32 page = 3 [(openapi.v3.property) = {description: "当前页码"; example: {yaml: "1"}}];
  int32 page_size = 4 [(openapi.v3.property) = {description: "每页数量"; example: {yaml: "10"}}];
  int32 total_pages = 5 [(openapi.v3.property) = {description: "总页数"; example: {yaml: "10"}}];
}

message UpdateDictDataRequest {
  option (openapi.v3.schema) = {
    description: "更新字典数据信息请求体";
  };
  optional string id = 1 [(openapi.v3.property) = {description: "字典数据ID"; example: {yaml: "123456789"}}];
  optional string dict_type_id = 2 [(openapi.v3.property) = {description: "字典类型ID"; example: {yaml: "987654321"}}];
  optional string label = 3 [(openapi.v3.property) = {description: "字典标签"; example: {yaml: "Male"}}];
  optional string value = 4 [(openapi.v3.property) = {description: "字典值"; example: {yaml: "1"}}];
  optional int32 sort = 5 [(openapi.v3.property) = {description: "排序号"; example: {yaml: "1"}}];
  optional int32 status = 6 [(openapi.v3.property) = {description: "状态: 0-停用, 1-正常"; example: {yaml: "1"}}];
  optional string css_class = 7 [(openapi.v3.property) = {description: "CSS类名"}];
  optional bool is_default = 8 [(openapi.v3.property) = {description: "是否默认"; example: {yaml: "false"}}];
  optional string remark = 9 [(openapi.v3.property) = {description: "备注信息"}];
}

message DeleteDictDataRequest {
  option (openapi.v3.schema) = {
    description: "删除字典数据请求体";
  };
  optional string id = 1 [(openapi.v3.property) = {description: "字典数据ID"; example: {yaml: "123456789"}}];
}
